Package_Tools/include_C/in_arbeit/fertig/SDL_video.h


typedef Uint32 SDL_DisplayID;
typedef Uint32 SDL_WindowID;
#define SDL_PROP_GLOBAL_VIDEO_WAYLAND_WL_DISPLAY_POINTER "SDL.video.wayland.wl_display"
typedef enum SDL_SystemTheme
{
    SDL_SYSTEM_THEME_UNKNOWN,   
    SDL_SYSTEM_THEME_LIGHT,     
    SDL_SYSTEM_THEME_DARK       
} SDL_SystemTheme;
typedef struct SDL_DisplayMode
{
    SDL_DisplayID displayID;        
    SDL_PixelFormat format;         
    int w;                          
    int h;                          
    float pixel_density;            
    float refresh_rate;             
    int refresh_rate_numerator;     
    int refresh_rate_denominator;   
    SDL_DisplayModeData *internal;  
} SDL_DisplayMode;
typedef enum SDL_DisplayOrientation
{
    SDL_ORIENTATION_UNKNOWN,            
    SDL_ORIENTATION_LANDSCAPE,          
    SDL_ORIENTATION_LANDSCAPE_FLIPPED,  
    SDL_ORIENTATION_PORTRAIT,           
    SDL_ORIENTATION_PORTRAIT_FLIPPED    
} SDL_DisplayOrientation;
typedef struct SDL_Window SDL_Window;
typedef Uint64 SDL_WindowFlags;
#define SDL_WINDOW_FULLSCREEN           SDL_UINT64_C(0x0000000000000001)    
#define SDL_WINDOW_OPENGL               SDL_UINT64_C(0x0000000000000002)    
#define SDL_WINDOW_OCCLUDED             SDL_UINT64_C(0x0000000000000004)    
#define SDL_WINDOW_HIDDEN               SDL_UINT64_C(0x0000000000000008)    
#define SDL_WINDOW_BORDERLESS           SDL_UINT64_C(0x0000000000000010)    
#define SDL_WINDOW_RESIZABLE            SDL_UINT64_C(0x0000000000000020)    
#define SDL_WINDOW_MINIMIZED            SDL_UINT64_C(0x0000000000000040)    
#define SDL_WINDOW_MAXIMIZED            SDL_UINT64_C(0x0000000000000080)    
#define SDL_WINDOW_MOUSE_GRABBED        SDL_UINT64_C(0x0000000000000100)    
#define SDL_WINDOW_INPUT_FOCUS          SDL_UINT64_C(0x0000000000000200)    
#define SDL_WINDOW_MOUSE_FOCUS          SDL_UINT64_C(0x0000000000000400)    
#define SDL_WINDOW_EXTERNAL             SDL_UINT64_C(0x0000000000000800)    
#define SDL_WINDOW_MODAL                SDL_UINT64_C(0x0000000000001000)    
#define SDL_WINDOW_HIGH_PIXEL_DENSITY   SDL_UINT64_C(0x0000000000002000)    
#define SDL_WINDOW_MOUSE_CAPTURE        SDL_UINT64_C(0x0000000000004000)    
#define SDL_WINDOW_MOUSE_RELATIVE_MODE  SDL_UINT64_C(0x0000000000008000)    
#define SDL_WINDOW_ALWAYS_ON_TOP        SDL_UINT64_C(0x0000000000010000)    
#define SDL_WINDOW_UTILITY              SDL_UINT64_C(0x0000000000020000)    
#define SDL_WINDOW_TOOLTIP              SDL_UINT64_C(0x0000000000040000)    
#define SDL_WINDOW_POPUP_MENU           SDL_UINT64_C(0x0000000000080000)    
#define SDL_WINDOW_KEYBOARD_GRABBED     SDL_UINT64_C(0x0000000000100000)    
#define SDL_WINDOW_VULKAN               SDL_UINT64_C(0x0000000010000000)    
#define SDL_WINDOW_METAL                SDL_UINT64_C(0x0000000020000000)    
#define SDL_WINDOW_TRANSPARENT          SDL_UINT64_C(0x0000000040000000)    
#define SDL_WINDOW_NOT_FOCUSABLE        SDL_UINT64_C(0x0000000080000000)    
#define SDL_WINDOWPOS_UNDEFINED_MASK    0x1FFF0000u
#define SDL_WINDOWPOS_CENTERED_MASK    0x2FFF0000u
typedef enum SDL_FlashOperation
{
    SDL_FLASH_CANCEL,                   
    SDL_FLASH_BRIEFLY,                  
    SDL_FLASH_UNTIL_FOCUSED             
} SDL_FlashOperation;
typedef enum SDL_GLattr
{
    SDL_GL_RED_SIZE,                    
    SDL_GL_GREEN_SIZE,                  
    SDL_GL_BLUE_SIZE,                   
    SDL_GL_ALPHA_SIZE,                  
    SDL_GL_BUFFER_SIZE,                 
    SDL_GL_DOUBLEBUFFER,                
    SDL_GL_DEPTH_SIZE,                  
    SDL_GL_STENCIL_SIZE,                
    SDL_GL_ACCUM_RED_SIZE,              
    SDL_GL_ACCUM_GREEN_SIZE,            
    SDL_GL_ACCUM_BLUE_SIZE,             
    SDL_GL_ACCUM_ALPHA_SIZE,            
    SDL_GL_STEREO,                      
    SDL_GL_MULTISAMPLEBUFFERS,          
    SDL_GL_MULTISAMPLESAMPLES,          
    SDL_GL_ACCELERATED_VISUAL,          
    SDL_GL_RETAINED_BACKING,            
    SDL_GL_CONTEXT_MAJOR_VERSION,       
    SDL_GL_CONTEXT_MINOR_VERSION,       
    SDL_GL_CONTEXT_FLAGS,               
    SDL_GL_CONTEXT_PROFILE_MASK,        
    SDL_GL_SHARE_WITH_CURRENT_CONTEXT,  
    SDL_GL_FRAMEBUFFER_SRGB_CAPABLE,    
    SDL_GL_CONTEXT_RELEASE_BEHAVIOR,    
    SDL_GL_CONTEXT_RESET_NOTIFICATION,  
    SDL_GL_CONTEXT_NO_ERROR,
    SDL_GL_FLOATBUFFERS,
    SDL_GL_EGL_PLATFORM
} SDL_GLattr;
typedef enum SDL_GLprofile
{
    SDL_GL_CONTEXT_PROFILE_CORE           = 0x0001,
    SDL_GL_CONTEXT_PROFILE_COMPATIBILITY  = 0x0002,
    SDL_GL_CONTEXT_PROFILE_ES             = 0x0004 
} SDL_GLprofile;
typedef enum SDL_GLcontextFlag
{
    SDL_GL_CONTEXT_DEBUG_FLAG              = 0x0001,
    SDL_GL_CONTEXT_FORWARD_COMPATIBLE_FLAG = 0x0002,
    SDL_GL_CONTEXT_ROBUST_ACCESS_FLAG      = 0x0004,
    SDL_GL_CONTEXT_RESET_ISOLATION_FLAG    = 0x0008
} SDL_GLcontextFlag;
typedef enum SDL_GLcontextReleaseFlag
{
    SDL_GL_CONTEXT_RELEASE_BEHAVIOR_NONE   = 0x0000,
    SDL_GL_CONTEXT_RELEASE_BEHAVIOR_FLUSH  = 0x0001
} SDL_GLcontextReleaseFlag;
typedef enum SDL_GLContextResetNotification
{
    SDL_GL_CONTEXT_RESET_NO_NOTIFICATION = 0x0000,
    SDL_GL_CONTEXT_RESET_LOSE_CONTEXT    = 0x0001
} SDL_GLContextResetNotification;
extern  int  SDL_GetNumVideoDrivers(void);
extern  const char *  SDL_GetVideoDriver(int index);
extern  const char *  SDL_GetCurrentVideoDriver(void);
extern  SDL_SystemTheme  SDL_GetSystemTheme(void);
extern  SDL_DisplayID *  SDL_GetDisplays(int *count);
extern  SDL_DisplayID  SDL_GetPrimaryDisplay(void);
extern  SDL_PropertiesID  SDL_GetDisplayProperties(SDL_DisplayID displayID);
#define SDL_PROP_DISPLAY_HDR_ENABLED_BOOLEAN             "SDL.display.HDR_enabled"
#define SDL_PROP_DISPLAY_KMSDRM_PANEL_ORIENTATION_NUMBER "SDL.display.KMSDRM.panel_orientation"
extern  const char *  SDL_GetDisplayName(SDL_DisplayID displayID);
extern  bool  SDL_GetDisplayBounds(SDL_DisplayID displayID, SDL_Rect *rect);
extern  bool  SDL_GetDisplayUsableBounds(SDL_DisplayID displayID, SDL_Rect *rect);
extern  SDL_DisplayOrientation  SDL_GetNaturalDisplayOrientation(SDL_DisplayID displayID);
extern  SDL_DisplayOrientation  SDL_GetCurrentDisplayOrientation(SDL_DisplayID displayID);
extern  float  SDL_GetDisplayContentScale(SDL_DisplayID displayID);
extern  SDL_DisplayMode **  SDL_GetFullscreenDisplayModes(SDL_DisplayID displayID, int *count);
extern  bool  SDL_GetClosestFullscreenDisplayMode(SDL_DisplayID displayID, int w, int h, float refresh_rate, bool include_high_density_modes, SDL_DisplayMode *mode);
extern  const SDL_DisplayMode *  SDL_GetDesktopDisplayMode(SDL_DisplayID displayID);
extern  const SDL_DisplayMode *  SDL_GetCurrentDisplayMode(SDL_DisplayID displayID);
extern  SDL_DisplayID  SDL_GetDisplayForPoint(const SDL_Point *point);
extern  SDL_DisplayID  SDL_GetDisplayForRect(const SDL_Rect *rect);
extern  SDL_DisplayID  SDL_GetDisplayForWindow(SDL_Window *window);
extern  float  SDL_GetWindowPixelDensity(SDL_Window *window);
extern  float  SDL_GetWindowDisplayScale(SDL_Window *window);
extern  bool  SDL_SetWindowFullscreenMode(SDL_Window *window, const SDL_DisplayMode *mode);
extern  const SDL_DisplayMode *  SDL_GetWindowFullscreenMode(SDL_Window *window);
extern  void *  SDL_GetWindowICCProfile(SDL_Window *window, size_t *size);
extern  SDL_PixelFormat  SDL_GetWindowPixelFormat(SDL_Window *window);
extern  SDL_Window **  SDL_GetWindows(int *count);
extern  SDL_Window *  SDL_CreateWindow(const char *title, int w, int h, SDL_WindowFlags flags);
extern  SDL_Window *  SDL_CreatePopupWindow(SDL_Window *parent, int offset_x, int offset_y, int w, int h, SDL_WindowFlags flags);
extern  SDL_Window *  SDL_CreateWindowWithProperties(SDL_PropertiesID props);
#define SDL_PROP_WINDOW_CREATE_ALWAYS_ON_TOP_BOOLEAN               "SDL.window.create.always_on_top"
#define SDL_PROP_WINDOW_CREATE_BORDERLESS_BOOLEAN                  "SDL.window.create.borderless"
#define SDL_PROP_WINDOW_CREATE_FOCUSABLE_BOOLEAN                   "SDL.window.create.focusable"
#define SDL_PROP_WINDOW_CREATE_EXTERNAL_GRAPHICS_CONTEXT_BOOLEAN   "SDL.window.create.external_graphics_context"
#define SDL_PROP_WINDOW_CREATE_FLAGS_NUMBER                        "SDL.window.create.flags"
#define SDL_PROP_WINDOW_CREATE_FULLSCREEN_BOOLEAN                  "SDL.window.create.fullscreen"
#define SDL_PROP_WINDOW_CREATE_HEIGHT_NUMBER                       "SDL.window.create.height"
#define SDL_PROP_WINDOW_CREATE_HIDDEN_BOOLEAN                      "SDL.window.create.hidden"
#define SDL_PROP_WINDOW_CREATE_HIGH_PIXEL_DENSITY_BOOLEAN          "SDL.window.create.high_pixel_density"
#define SDL_PROP_WINDOW_CREATE_MAXIMIZED_BOOLEAN                   "SDL.window.create.maximized"
#define SDL_PROP_WINDOW_CREATE_MENU_BOOLEAN                        "SDL.window.create.menu"
#define SDL_PROP_WINDOW_CREATE_METAL_BOOLEAN                       "SDL.window.create.metal"
#define SDL_PROP_WINDOW_CREATE_MINIMIZED_BOOLEAN                   "SDL.window.create.minimized"
#define SDL_PROP_WINDOW_CREATE_MODAL_BOOLEAN                       "SDL.window.create.modal"
#define SDL_PROP_WINDOW_CREATE_MOUSE_GRABBED_BOOLEAN               "SDL.window.create.mouse_grabbed"
#define SDL_PROP_WINDOW_CREATE_OPENGL_BOOLEAN                      "SDL.window.create.opengl"
#define SDL_PROP_WINDOW_CREATE_PARENT_POINTER                      "SDL.window.create.parent"
#define SDL_PROP_WINDOW_CREATE_RESIZABLE_BOOLEAN                   "SDL.window.create.resizable"
#define SDL_PROP_WINDOW_CREATE_TITLE_STRING                        "SDL.window.create.title"
#define SDL_PROP_WINDOW_CREATE_TRANSPARENT_BOOLEAN                 "SDL.window.create.transparent"
#define SDL_PROP_WINDOW_CREATE_TOOLTIP_BOOLEAN                     "SDL.window.create.tooltip"
#define SDL_PROP_WINDOW_CREATE_UTILITY_BOOLEAN                     "SDL.window.create.utility"
#define SDL_PROP_WINDOW_CREATE_VULKAN_BOOLEAN                      "SDL.window.create.vulkan"
#define SDL_PROP_WINDOW_CREATE_WIDTH_NUMBER                        "SDL.window.create.width"
#define SDL_PROP_WINDOW_CREATE_X_NUMBER                            "SDL.window.create.x"
#define SDL_PROP_WINDOW_CREATE_Y_NUMBER                            "SDL.window.create.y"
#define SDL_PROP_WINDOW_CREATE_COCOA_WINDOW_POINTER                "SDL.window.create.cocoa.window"
#define SDL_PROP_WINDOW_CREATE_COCOA_VIEW_POINTER                  "SDL.window.create.cocoa.view"
#define SDL_PROP_WINDOW_CREATE_WAYLAND_SURFACE_ROLE_CUSTOM_BOOLEAN "SDL.window.create.wayland.surface_role_custom"
#define SDL_PROP_WINDOW_CREATE_WAYLAND_CREATE_EGL_WINDOW_BOOLEAN   "SDL.window.create.wayland.create_egl_window"
#define SDL_PROP_WINDOW_CREATE_WAYLAND_WL_SURFACE_POINTER          "SDL.window.create.wayland.wl_surface"
#define SDL_PROP_WINDOW_CREATE_WIN32_HWND_POINTER                  "SDL.window.create.win32.hwnd"
#define SDL_PROP_WINDOW_CREATE_WIN32_PIXEL_FORMAT_HWND_POINTER     "SDL.window.create.win32.pixel_format_hwnd"
#define SDL_PROP_WINDOW_CREATE_X11_WINDOW_NUMBER                   "SDL.window.create.x11.window"
extern  SDL_WindowID  SDL_GetWindowID(SDL_Window *window);
extern  SDL_Window *  SDL_GetWindowFromID(SDL_WindowID id);
extern  SDL_Window *  SDL_GetWindowParent(SDL_Window *window);
extern  SDL_PropertiesID  SDL_GetWindowProperties(SDL_Window *window);