Package_Tools/pas_units/SDL_video.pas

unit SDL_video;

interface

uses
  SDL_stdinc, SDL_pixels, SDL_properties, SDL_rect, SDL_surface;

  {$IFDEF FPC}
  {$PACKRECORDS C}
  {$ENDIF}

type
  PSDL_DisplayID = ^TSDL_DisplayID;
  TSDL_DisplayID = TUint32;

  PSDL_WindowID = ^TSDL_WindowID;
  TSDL_WindowID = TUint32;

const
  SDL_PROP_GLOBAL_VIDEO_WAYLAND_WL_DISPLAY_POINTER = 'SDL.video.wayland.wl_display';

type
  PSDL_SystemTheme = ^TSDL_SystemTheme;
  TSDL_SystemTheme = longint;

const
  SDL_SYSTEM_THEME_UNKNOWN = 0;
  SDL_SYSTEM_THEME_LIGHT = 1;
  SDL_SYSTEM_THEME_DARK = 2;

type
  TSDL_DisplayModeData = record
  end;
  PSDL_DisplayModeData = ^TSDL_DisplayModeData;

  TSDL_DisplayMode = record
    displayID: TSDL_DisplayID;
    format: TSDL_PixelFormat;
    w: longint;
    h: longint;
    pixel_density: single;
    refresh_rate: single;
    refresh_rate_numerator: longint;
    refresh_rate_denominator: longint;
    internal: PSDL_DisplayModeData;
  end;
  PSDL_DisplayMode = ^TSDL_DisplayMode;
  PPSDL_DisplayMode = ^PSDL_DisplayMode;

  PSDL_DisplayOrientation = ^TSDL_DisplayOrientation;
  TSDL_DisplayOrientation = longint;

const
  SDL_ORIENTATION_UNKNOWN = 0;
  SDL_ORIENTATION_LANDSCAPE = 1;
  SDL_ORIENTATION_LANDSCAPE_FLIPPED = 2;
  SDL_ORIENTATION_PORTRAIT = 3;
  SDL_ORIENTATION_PORTRAIT_FLIPPED = 4;

type
  PSDL_WindowFlags = ^TSDL_WindowFlags;
  TSDL_WindowFlags = TUint64;

const
  SDL_WINDOW_FULLSCREEN = $0000000000000001;
  SDL_WINDOW_OPENGL = $0000000000000002;
  SDL_WINDOW_OCCLUDED = $0000000000000004;
  SDL_WINDOW_HIDDEN = $0000000000000008;
  SDL_WINDOW_BORDERLESS = $0000000000000010;
  SDL_WINDOW_RESIZABLE = $0000000000000020;
  SDL_WINDOW_MINIMIZED = $0000000000000040;
  SDL_WINDOW_MAXIMIZED = $0000000000000080;
  SDL_WINDOW_MOUSE_GRABBED = $0000000000000100;
  SDL_WINDOW_INPUT_FOCUS = $0000000000000200;
  SDL_WINDOW_MOUSE_FOCUS = $0000000000000400;
  SDL_WINDOW_EXTERNAL = $0000000000000800;
  SDL_WINDOW_MODAL = $0000000000001000;
  SDL_WINDOW_HIGH_PIXEL_DENSITY = $0000000000002000;
  SDL_WINDOW_MOUSE_CAPTURE = $0000000000004000;
  SDL_WINDOW_MOUSE_RELATIVE_MODE = $0000000000008000;
  SDL_WINDOW_ALWAYS_ON_TOP = $0000000000010000;
  SDL_WINDOW_UTILITY = $0000000000020000;
  SDL_WINDOW_TOOLTIP = $0000000000040000;
  SDL_WINDOW_POPUP_MENU = $0000000000080000;
  SDL_WINDOW_KEYBOARD_GRABBED = $0000000000100000;
  SDL_WINDOW_VULKAN = $0000000010000000;
  SDL_WINDOW_METAL = $0000000020000000;
  SDL_WINDOW_TRANSPARENT = $0000000040000000;
  SDL_WINDOW_NOT_FOCUSABLE = $0000000080000000;

const
  SDL_WINDOWPOS_UNDEFINED_MASK = $1FFF0000;
  SDL_WINDOWPOS_CENTERED_MASK = $2FFF0000;

type
  PSDL_FlashOperation = ^TSDL_FlashOperation;
  TSDL_FlashOperation = longint;

const
  SDL_FLASH_CANCEL = 0;
  SDL_FLASH_BRIEFLY = 1;
  SDL_FLASH_UNTIL_FOCUSED = 2;

type
  PSDL_GLContext = ^TSDL_GLContext;
  TSDL_GLContext = PSDL_GLContextState;

  PSDL_EGLDisplay = ^TSDL_EGLDisplay;
  TSDL_EGLDisplay = pointer;

  PSDL_EGLConfig = ^TSDL_EGLConfig;
  TSDL_EGLConfig = pointer;

  PSDL_EGLSurface = ^TSDL_EGLSurface;
  TSDL_EGLSurface = pointer;

  PSDL_EGLAttrib = ^TSDL_EGLAttrib;
  TSDL_EGLAttrib = Tintptr_t;

  PSDL_EGLint = ^TSDL_EGLint;
  TSDL_EGLint = longint;

  PSDL_EGLAttribArrayCallback = ^TSDL_EGLAttribArrayCallback;
  TSDL_EGLAttribArrayCallback = function(userdata: pointer): PSDL_EGLAttrib; cdecl;

  PSDL_EGLIntArrayCallback = ^TSDL_EGLIntArrayCallback;
  TSDL_EGLIntArrayCallback = function(userdata: pointer; display: TSDL_EGLDisplay; config: TSDL_EGLConfig): PSDL_EGLint; cdecl;

  PSDL_GLattr = ^TSDL_GLattr;
  TSDL_GLattr = longint;

const
  SDL_GL_RED_SIZE = 0;
  SDL_GL_GREEN_SIZE = 1;
  SDL_GL_BLUE_SIZE = 2;
  SDL_GL_ALPHA_SIZE = 3;
  SDL_GL_BUFFER_SIZE = 4;
  SDL_GL_DOUBLEBUFFER = 5;
  SDL_GL_DEPTH_SIZE = 6;
  SDL_GL_STENCIL_SIZE = 7;
  SDL_GL_ACCUM_RED_SIZE = 8;
  SDL_GL_ACCUM_GREEN_SIZE = 9;
  SDL_GL_ACCUM_BLUE_SIZE = 10;
  SDL_GL_ACCUM_ALPHA_SIZE = 11;
  SDL_GL_STEREO = 12;
  SDL_GL_MULTISAMPLEBUFFERS = 13;
  SDL_GL_MULTISAMPLESAMPLES = 14;
  SDL_GL_ACCELERATED_VISUAL = 15;
  SDL_GL_RETAINED_BACKING = 16;
  SDL_GL_CONTEXT_MAJOR_VERSION = 17;
  SDL_GL_CONTEXT_MINOR_VERSION = 18;
  SDL_GL_CONTEXT_FLAGS = 19;
  SDL_GL_CONTEXT_PROFILE_MASK = 20;
  SDL_GL_SHARE_WITH_CURRENT_CONTEXT = 21;
  SDL_GL_FRAMEBUFFER_SRGB_CAPABLE = 22;
  SDL_GL_CONTEXT_RELEASE_BEHAVIOR = 23;
  SDL_GL_CONTEXT_RESET_NOTIFICATION = 24;
  SDL_GL_CONTEXT_NO_ERROR = 25;
  SDL_GL_FLOATBUFFERS = 26;
  SDL_GL_EGL_PLATFORM = 27;

type
  PSDL_GLprofile = ^TSDL_GLprofile;
  TSDL_GLprofile = longint;

const
  SDL_GL_CONTEXT_PROFILE_CORE = $0001;
  SDL_GL_CONTEXT_PROFILE_COMPATIBILITY = $0002;
  SDL_GL_CONTEXT_PROFILE_ES = $0004;

type
  PSDL_GLcontextFlag = ^TSDL_GLcontextFlag;
  TSDL_GLcontextFlag = longint;

const
  SDL_GL_CONTEXT_DEBUG_FLAG = $0001;
  SDL_GL_CONTEXT_FORWARD_COMPATIBLE_FLAG = $0002;
  SDL_GL_CONTEXT_ROBUST_ACCESS_FLAG = $0004;
  SDL_GL_CONTEXT_RESET_ISOLATION_FLAG = $0008;

type
  PSDL_GLcontextReleaseFlag = ^TSDL_GLcontextReleaseFlag;
  TSDL_GLcontextReleaseFlag = longint;

const
  SDL_GL_CONTEXT_RELEASE_BEHAVIOR_NONE = $0000;
  SDL_GL_CONTEXT_RELEASE_BEHAVIOR_FLUSH = $0001;

type
  PSDL_GLContextResetNotification = ^TSDL_GLContextResetNotification;
  TSDL_GLContextResetNotification = longint;

const
  SDL_GL_CONTEXT_RESET_NO_NOTIFICATION = $0000;
  SDL_GL_CONTEXT_RESET_LOSE_CONTEXT = $0001;

type
  TSDL_Window = record
  end;
  PSDL_Window = ^TSDL_Window;
  PPSDL_Window = ^PSDL_Window;

function SDL_GetNumVideoDrivers: longint; cdecl; external libSDL3;
function SDL_GetVideoDriver(index: longint): pansichar; cdecl; external libSDL3;
function SDL_GetCurrentVideoDriver: pansichar; cdecl; external libSDL3;
function SDL_GetSystemTheme: TSDL_SystemTheme; cdecl; external libSDL3;
function SDL_GetDisplays(Count: Plongint): PSDL_DisplayID; cdecl; external libSDL3;
function SDL_GetPrimaryDisplay: TSDL_DisplayID; cdecl; external libSDL3;
function SDL_GetDisplayProperties(displayID: TSDL_DisplayID): TSDL_PropertiesID; cdecl; external libSDL3;

const
  SDL_PROP_DISPLAY_HDR_ENABLED_BOOLEAN = 'SDL.display.HDR_enabled';
  SDL_PROP_DISPLAY_KMSDRM_PANEL_ORIENTATION_NUMBER = 'SDL.display.KMSDRM.panel_orientation';

function SDL_GetDisplayName(displayID: TSDL_DisplayID): pansichar; cdecl; external libSDL3;
function SDL_GetDisplayBounds(displayID: TSDL_DisplayID; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_GetDisplayUsableBounds(displayID: TSDL_DisplayID; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_GetNaturalDisplayOrientation(displayID: TSDL_DisplayID): TSDL_DisplayOrientation; cdecl; external libSDL3;
function SDL_GetCurrentDisplayOrientation(displayID: TSDL_DisplayID): TSDL_DisplayOrientation; cdecl; external libSDL3;
function SDL_GetDisplayContentScale(displayID: TSDL_DisplayID): single; cdecl; external libSDL3;
function SDL_GetFullscreenDisplayModes(displayID: TSDL_DisplayID; Count: Plongint): PPSDL_DisplayMode; cdecl; external libSDL3;
function SDL_GetClosestFullscreenDisplayMode(displayID: TSDL_DisplayID; w: longint; h: longint; refresh_rate: single; include_high_density_modes: Tbool;
  mode: PSDL_DisplayMode): Tbool; cdecl; external libSDL3;
function SDL_GetDesktopDisplayMode(displayID: TSDL_DisplayID): PSDL_DisplayMode; cdecl; external libSDL3;
function SDL_GetCurrentDisplayMode(displayID: TSDL_DisplayID): PSDL_DisplayMode; cdecl; external libSDL3;
function SDL_GetDisplayForPoint(point: PSDL_Point): TSDL_DisplayID; cdecl; external libSDL3;
function SDL_GetDisplayForRect(rect: PSDL_Rect): TSDL_DisplayID; cdecl; external libSDL3;
function SDL_GetDisplayForWindow(window: PSDL_Window): TSDL_DisplayID; cdecl; external libSDL3;
function SDL_GetWindowPixelDensity(window: PSDL_Window): single; cdecl; external libSDL3;
function SDL_GetWindowDisplayScale(window: PSDL_Window): single; cdecl; external libSDL3;
function SDL_SetWindowFullscreenMode(window: PSDL_Window; mode: PSDL_DisplayMode): Tbool; cdecl; external libSDL3;
function SDL_GetWindowFullscreenMode(window: PSDL_Window): PSDL_DisplayMode; cdecl; external libSDL3;
function SDL_GetWindowICCProfile(window: PSDL_Window; size: Psize_t): pointer; cdecl; external libSDL3;
function SDL_GetWindowPixelFormat(window: PSDL_Window): TSDL_PixelFormat; cdecl; external libSDL3;
function SDL_GetWindows(Count: Plongint): PPSDL_Window; cdecl; external libSDL3;
function SDL_CreateWindow(title: pansichar; w: longint; h: longint; flags: TSDL_WindowFlags): PSDL_Window; cdecl; external libSDL3;
function SDL_CreatePopupWindow(parent: PSDL_Window; offset_x: longint; offset_y: longint; w: longint; h: longint;
  flags: TSDL_WindowFlags): PSDL_Window; cdecl; external libSDL3;
function SDL_CreateWindowWithProperties(props: TSDL_PropertiesID): PSDL_Window; cdecl; external libSDL3;

const
  SDL_PROP_WINDOW_CREATE_ALWAYS_ON_TOP_BOOLEAN = 'SDL.window.create.always_on_top';
  SDL_PROP_WINDOW_CREATE_BORDERLESS_BOOLEAN = 'SDL.window.create.borderless';
  SDL_PROP_WINDOW_CREATE_FOCUSABLE_BOOLEAN = 'SDL.window.create.focusable';
  SDL_PROP_WINDOW_CREATE_EXTERNAL_GRAPHICS_CONTEXT_BOOLEAN = 'SDL.window.create.external_graphics_context';
  SDL_PROP_WINDOW_CREATE_FLAGS_NUMBER = 'SDL.window.create.flags';
  SDL_PROP_WINDOW_CREATE_FULLSCREEN_BOOLEAN = 'SDL.window.create.fullscreen';
  SDL_PROP_WINDOW_CREATE_HEIGHT_NUMBER = 'SDL.window.create.height';
  SDL_PROP_WINDOW_CREATE_HIDDEN_BOOLEAN = 'SDL.window.create.hidden';
  SDL_PROP_WINDOW_CREATE_HIGH_PIXEL_DENSITY_BOOLEAN = 'SDL.window.create.high_pixel_density';
  SDL_PROP_WINDOW_CREATE_MAXIMIZED_BOOLEAN = 'SDL.window.create.maximized';
  SDL_PROP_WINDOW_CREATE_MENU_BOOLEAN = 'SDL.window.create.menu';
  SDL_PROP_WINDOW_CREATE_METAL_BOOLEAN = 'SDL.window.create.metal';
  SDL_PROP_WINDOW_CREATE_MINIMIZED_BOOLEAN = 'SDL.window.create.minimized';
  SDL_PROP_WINDOW_CREATE_MODAL_BOOLEAN = 'SDL.window.create.modal';
  SDL_PROP_WINDOW_CREATE_MOUSE_GRABBED_BOOLEAN = 'SDL.window.create.mouse_grabbed';
  SDL_PROP_WINDOW_CREATE_OPENGL_BOOLEAN = 'SDL.window.create.opengl';
  SDL_PROP_WINDOW_CREATE_PARENT_POINTER = 'SDL.window.create.parent';
  SDL_PROP_WINDOW_CREATE_RESIZABLE_BOOLEAN = 'SDL.window.create.resizable';
  SDL_PROP_WINDOW_CREATE_TITLE_STRING = 'SDL.window.create.title';
  SDL_PROP_WINDOW_CREATE_TRANSPARENT_BOOLEAN = 'SDL.window.create.transparent';
  SDL_PROP_WINDOW_CREATE_TOOLTIP_BOOLEAN = 'SDL.window.create.tooltip';
  SDL_PROP_WINDOW_CREATE_UTILITY_BOOLEAN = 'SDL.window.create.utility';
  SDL_PROP_WINDOW_CREATE_VULKAN_BOOLEAN = 'SDL.window.create.vulkan';
  SDL_PROP_WINDOW_CREATE_WIDTH_NUMBER = 'SDL.window.create.width';
  SDL_PROP_WINDOW_CREATE_X_NUMBER = 'SDL.window.create.x';
  SDL_PROP_WINDOW_CREATE_Y_NUMBER = 'SDL.window.create.y';
  SDL_PROP_WINDOW_CREATE_COCOA_WINDOW_POINTER = 'SDL.window.create.cocoa.window';
  SDL_PROP_WINDOW_CREATE_COCOA_VIEW_POINTER = 'SDL.window.create.cocoa.view';
  SDL_PROP_WINDOW_CREATE_WAYLAND_SURFACE_ROLE_CUSTOM_BOOLEAN = 'SDL.window.create.wayland.surface_role_custom';
  SDL_PROP_WINDOW_CREATE_WAYLAND_CREATE_EGL_WINDOW_BOOLEAN = 'SDL.window.create.wayland.create_egl_window';
  SDL_PROP_WINDOW_CREATE_WAYLAND_WL_SURFACE_POINTER = 'SDL.window.create.wayland.wl_surface';
  SDL_PROP_WINDOW_CREATE_WIN32_HWND_POINTER = 'SDL.window.create.win32.hwnd';
  SDL_PROP_WINDOW_CREATE_WIN32_PIXEL_FORMAT_HWND_POINTER = 'SDL.window.create.win32.pixel_format_hwnd';
  SDL_PROP_WINDOW_CREATE_X11_WINDOW_NUMBER = 'SDL.window.create.x11.window';

function SDL_GetWindowID(window: PSDL_Window): TSDL_WindowID; cdecl; external libSDL3;
function SDL_GetWindowFromID(id: TSDL_WindowID): PSDL_Window; cdecl; external libSDL3;
function SDL_GetWindowParent(window: PSDL_Window): PSDL_Window; cdecl; external libSDL3;
function SDL_GetWindowProperties(window: PSDL_Window): TSDL_PropertiesID; cdecl; external libSDL3;
